Feat: Fully localize MediaPipe assets (WASM and Model)

--- a/christmas.html
+++ b/christmas.html
@@ -109,7 +109,7 @@
             "imports": {
                 "three": "./js/vendor/three/three.module.js",
                 "three/addons/": "./js/vendor/three/addons/",
-                "@mediapipe/tasks-vision": "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/+esm"
+                "@mediapipe/tasks-vision": "./js/vendor/mediapipe/tasks-vision.js"
             }
         }
     </script>
@@ -526,11 +526,11 @@
             webcamCanvas.width = 160; webcamCanvas.height = 120;
 
             const vision = await FilesetResolver.forVisionTasks(
-                "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/wasm"
+                "./js/vendor/mediapipe/wasm"
             );
             handLandmarker = await HandLandmarker.createFromOptions(vision, {
                 baseOptions: {
-                    modelAssetPath: `https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task`,
+                    modelAssetPath: "./js/vendor/mediapipe/models/hand_landmarker.task",
                     delegate: "GPU"
                 },
                 runningMode: "VIDEO",
